--- a/Personal_Website/index.html
+++ b/Personal_Website/index.html
@@ -62,7 +62,7 @@
 
     <!-- My script(s) -->
     <script src="js/script.js"></script>
-    <script src="js/showFunctions.js"></script>
+    <script src="js/exercice1.js"></script>
     <script src="js/Shapes.js"></script>
   </body>
 
