fixed the CSS paths

--- a/Personal_Website/final_proposal/project_proposal.html
+++ b/Personal_Website/final_proposal/project_proposal.html
@@ -38,7 +38,7 @@
                 </div>
                 <div class="float-child">
                     <div class="image">
-                        <img src="/images/website_intemporel.png" alt="website_adding_data">
+                        <img src="images/website_intemporel.png" alt="website_adding_data">
                     </div>
                 </div>
             </div>
@@ -53,7 +53,7 @@
                 </div>
                 <div class="float-child">
                     <div class="image">
-                        <img src="/images/website_overview.png" alt="website_adding_data">
+                        <img src="images/website_overview.png" alt="website_adding_data">
                     </div>
                 </div>
             </div>
@@ -68,7 +68,7 @@
                 </div>
                 <div class="float-child">
                     <div class="image">
-                        <img src="/images/website_pov.png" alt="website_adding_data">
+                        <img src="images/website_pov.png" alt="website_adding_data">
                     </div>
                 </div>
             </div>
@@ -88,7 +88,7 @@
                 </a>
             </h2>
             <a href="https://clubsolo.org/map" target=”_blank” >
-                <img src="/images/club_sexu.jpg" alt="website_adding_data">
+                <img src="images/club_sexu.jpg" alt="website_adding_data">
             </a>
             
             <p>
@@ -123,7 +123,7 @@
                 <div class="float-child">
                     <div class="image">
                         <a href="https://chrome.google.com/webstore/detail/world-birthsdeaths-in-rea/noghphokfbhedlkhnoojmjfdbofidgbi?hl=en">
-                            <img src="/images/world_births.jpg" alt="website_adding_data" >
+                            <img src="images/world_births.jpg" alt="website_adding_data" >
                         </a>
                         
                     </div>
@@ -150,7 +150,7 @@
                 changer subtilement l’angle de la caméra pour avoir une idée du relief de la carte. 
             </p>
             <a href="https://chartogne-taillet.com/en">
-                <img src="/images/vignoble.JPG" alt="website_adding_data" >
+                <img src="images/vignoble.JPG" alt="website_adding_data" >
             </a>
 
             <h2>
@@ -174,7 +174,7 @@
                 projet va chercher plusieurs des points forts de nos inspirations, mais surtout accomplit
                 une mission très différente, autant dans la méthodologie que dans le résultat final.
             </p>
-            <img src="/images/website_adding_data.png" alt="Représentation visuelle de l'ajout de données">
+            <img src="images/website_adding_data.png" alt="Représentation visuelle de l'ajout de données">
         </div>
     </div>
 </body>
