Ex2: basic funtionning

--- a/Personal_Website/index.html
+++ b/Personal_Website/index.html
@@ -12,6 +12,7 @@
     <!-- Library script(s) go here -->
     <script src="js/libraries/p5.min.js"></script>
     <script src="js/libraries/perlin.js"></script>
+    <script src="js/libraries/jquery-3.6.0.min.js"></script>
   </head>
 
   <body>
