--- a/Personal_Website/index.html
+++ b/Personal_Website/index.html
@@ -79,6 +79,22 @@
         <canvas id="my-canvas"></canvas>
       </div>
     </div>
+    
+    <div id="item-11" class="item-invisible">
+      <div class="propaganda-content">
+        <a class="propaganda"" href="assets/zip/Cusson-Fradet_Lucien_cart351_Exercise_1.zip">Download Exercise 1</a>
+      </div>
+    </div>
+
+    <div id="item-26" class="item-invisible">
+      <div id="ex2-super-wrapper"></div>
+    </div>
+
+    <div id="item-27" class="item-invisible">
+      <div class="propaganda-content">
+        <a class="propaganda"" href="assets/zip/Cusson-Fradet_Lucien_cart351_Exercise_2.zip">Download Exercise 2</a>
+      </div>
+    </div>
 
     <div id="item-19" class="item-invisible" style="display:table;">
       <div class="content" style="vertical-align:middle; display:table-cell;">
@@ -93,6 +109,7 @@
     <!-- My script(s) -->
     <script src="js/script.js"></script>
     <script src="js/exercice1.js"></script>
+    <script src="js/exercice2.js"></script>
     <script src="js/Shapes.js"></script>
   </body>
 
